[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/UI/UI_Square.png" type="Texture" id=1]
[ext_resource path="res://assets/font/Roboto-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://PStates.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_color = Color( 0.2, 0.0784314, 0.901961, 1 )
extra_spacing_char = 5
font_data = ExtResource( 2 )

[node name="PStates" type="Control"]
anchor_right = 1.0
margin_bottom = 94.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="TextureRect" parent="."]
self_modulate = Color( 0.258824, 0.247059, 0.247059, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="BG"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoldText" type="Label" parent="BG/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 1 )
text = "Gold: 20"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="BG/VBoxContainer"]
margin_top = 40.0
margin_right = 1024.0
margin_bottom = 94.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelText" type="Label" parent="BG/VBoxContainer/HBoxContainer"]
margin_right = 510.0
margin_bottom = 54.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "50"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="BG/VBoxContainer/HBoxContainer"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 54.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HealthBar" type="TextureProgress" parent="BG/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 510.0
margin_bottom = 25.0
size_flags_vertical = 3
value = 20.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 1 )
tint_under = Color( 0.282353, 0.282353, 0.305882, 1 )
tint_over = Color( 0.952941, 0.917647, 0.917647, 1 )
tint_progress = Color( 0.87451, 0.121569, 0.121569, 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="XPBar" type="TextureProgress" parent="BG/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 29.0
margin_right = 510.0
margin_bottom = 54.0
size_flags_vertical = 3
value = 40.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 1 )
tint_under = Color( 0.278431, 0.270588, 0.270588, 1 )
tint_progress = Color( 0.168627, 0.0901961, 0.858824, 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}
